--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
                                     />
                                   </div>
                                 </div>
+                                <div class="swiper-pagination"></div>
                                 <div
                                   class="swiper-button-next popup__swiper-button popup__swiper-button--next"
                                 >
